# break-timer

./: .gitignore  LICENSE  README.md  installer.iss  pyproject.toml  run_break_timer.py  run_breakbell.py  version_info.txt
.github/workflows/: build.yml
src/break_timer/: app.py  audio.py  cli.py  config.py  settings_window.py  tray.py
src/breakbell/: app.py  audio.py  cli.py  config.py  settings_window.py  tray.py
